<resources>
    <string name="app_name">VideoDemo</string>
    <string name="tab1">在追</string>
    <string name="tab2">短剧</string>
    <string name="tab3">会员</string>
    <string name="tab4">我的</string>

    <string name="tab5">热门</string>
    <string name="tab6">专享</string>
    <string name="tab7">逆袭</string>
    <string name="tab8">爱情</string>
    <string name="tab9">重生</string>
    <string name="tab10">赘婿</string>
    <string name="tab11">神医</string>
    <string name="tab12">家庭</string>

    <string name="book_name1">楚乔传</string>
    <string name="book_name2">西游记</string>
    <string name="book_name3">水浒传</string>
    <string name="book_name4">长风渡</string>
    <string name="book_name5">回家的诱惑</string>
    <string name="book_name6">长风渡</string>
    <string name="book_name7">泰坦尼克号</string>

    <string name="book_state1">更新中（34集）</string>
    <string name="book_state2">已完结（60集）</string>
    <string name="book_state3">更新中（22集）</string>
    <string name="book_state4">已完结（87集）</string>
    <string name="book_state5">已完结（89集）</string>

    <string name="num_1">第1集</string>
    <string name="num_2">第2集</string>
    <string name="num_3">第3集</string>
    <string name="num_4">第4集</string>
    <string name="num_5">第5集</string>
    <string name="num_6">第6集</string>
    <string name="num_7">第7集</string>
    <string name="num_8">第8集</string>
    <string name="num_9">第9集</string>
    <string name="num_10">第10集</string>
    <string name="num_11">第11集</string>
    <string name="num_12">第12集</string>
    <string name="num_13">第13集</string>

    <string name="intro_1">初相识哈哈哈红红火火恍恍惚惚</string>
    <string name="intro_2">打起来打起来嘻嘻嘻嘻嘻嘻嘻嘻</string>
    <string name="intro_3">不打不相识哈哈哈哈哈哈哈哈哈</string>
    <string name="intro_4">恨意涌动她她她她她她她</string>
    <string name="intro_5">爱意萌生啊啊啊啊啊啊啊啊</string>
    <string name="intro_6">心生愧疚哇哇哇哇哇哇哇哇哇哇</string>

    <string name="input_book">输入书名</string>
</resources>